- Improve the operation of getting all the movies by pagination and sorting.