@@ -2,11 +2,14 @@ package com.example.moview.moview.controller;
 
 import com.example.moview.moview.dto.movie.MovieCreateDto;
 import com.example.moview.moview.dto.movie.MovieDto;
+import com.example.moview.moview.dto.movie.MovieReadPageDto;
 import com.example.moview.moview.dto.movie.MovieShortDto;
 import com.example.moview.moview.dto.movie.MovieUpdateDto;
 import com.example.moview.moview.model.Movie;
 import com.example.moview.moview.service.MovieService;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,6 +20,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 public class MovieController {
@@ -59,10 +63,13 @@ public class MovieController {
     }
 
     @RequestMapping(value = "/movie/all", method = RequestMethod.GET)
-    public ResponseEntity<List<MovieShortDto>> readAll() {
-        final List<Movie> movieList = movieService.readAll();
-        final List<MovieShortDto> dtoList = movieList.stream()
-                .map(x -> modelMapper.map(x, MovieShortDto.class)).toList();
+    public ResponseEntity<List<MovieDto>> readAll(@RequestBody @Valid final MovieReadPageDto dto) {
+
+        final PageRequest pageRequest = modelMapper.map(dto, PageRequest.class);
+        final Page<Movie> movieList = movieService.readAll(pageRequest);
+
+        final List<MovieDto> dtoList = movieList.getContent().stream()
+                .map(x -> modelMapper.map(x, MovieDto.class)).collect(Collectors.toList());
         return ResponseEntity.status(HttpStatus.OK).body(dtoList);
     }
 }
